--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,44 @@ asgiref==3.5.2
 autopep8==1.7.0
 boto3==1.24.60
 botocore==1.27.60
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==37.0.4
+defusedxml==0.7.1
+Deprecated==1.2.13
 Django==4.1
 django-cors-headers==3.13.0
+django-oauth-toolkit==2.1.0
 django-storages==1.13.1
 djangorestframework==3.13.1
+drf-social-oauth2==1.2.1
+ecdsa==0.18.0
 gunicorn==20.1.0
+idna==3.3
 jmespath==1.0.1
+jwcrypto==1.3.1
+oauthlib==3.2.0
 Pillow==9.2.0
 psycopg2==2.9.3
+pyasn1==0.4.8
 pycodestyle==2.9.1
+pycparser==2.21
+PyJWT==2.4.0
 python-dateutil==2.8.2
+python-jose==3.3.0
+python3-openid==3.2.0
 pytz==2022.2.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 s3transfer==0.6.0
 six==1.16.0
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.2
 urllib3==1.26.12
 whitenoise==6.2.0
+wrapt==1.14.1
